arbitrary-key-values: add Default value for parameter DataHubAccessToken

--- a/Ingestion/templates/python.ecs.template.yaml
+++ b/Ingestion/templates/python.ecs.template.yaml
@@ -74,6 +74,7 @@ Parameters:
   DataHubAccessToken:
     Type: "String"
     NoEcho: Yes
+    Default: ""
     Description: "DataHub Access Token, if not specified, will get it from ExistingDataHubAccessTokenSecretArn"
   ExecutorId:
     Type: "String"
