--- a/Ingestion/templates/python.ecs.template.yaml
+++ b/Ingestion/templates/python.ecs.template.yaml
@@ -107,8 +107,8 @@ Parameters:
     Description: "Command SQS Queue ARN, for example: arn:aws:sqs:us-east-1:11111111111:xxx"
   ImageTag:
     Type: "String"
-    Default: "v0.0.3.6"
-    Description: "The image tag for the Acryl Remote Executor, defaults to the latest release."
+    Default: "v0.0.3.9"
+    Description: "The image tag for the Acryl Remote Executor. See the Remote Executor docs for version information."
   TaskCpu:
     Type: "String"
     Default: 1024
