fix: Fix typo in parsing logic of first optional env var

--- a/Ingestion/templates/python.ecs.template.yaml
+++ b/Ingestion/templates/python.ecs.template.yaml
@@ -541,7 +541,7 @@ Resources:
             - !If 
               - UseOptionalEnvVar01
               - Name: !Select [0, !Split ["=", !Ref OptionalEnvVars]]
-                Value: !Select [1, !Split ["=", !Select [0, !Split [",", !Ref OptionalSecrets]]]]
+                Value: !Select [1, !Split ["=", !Select [0, !Split [",", !Ref OptionalEnvVars]]]]
               - !Ref "AWS::NoValue"
             - !If 
               - UseOptionalEnvVar02
