Adds parameter to configure AWS region

--- a/Ingestion/templates/python.ecs.template.yaml
+++ b/Ingestion/templates/python.ecs.template.yaml
@@ -9,6 +9,10 @@ Metadata:
             - VPCID
             - SubnetID
         - Label:
+            default: AWS Environment
+          Parameters:
+            - AwsRegion
+        - Label:
             default: DataHub Info
           Parameters:
             - DataHubBaseUrl
@@ -31,6 +35,8 @@ Metadata:
           Default: "The Existing Subnet ID"
         VPCID:
           Default: "The Existing VPC ID"
+        AwsRegion:
+          Default: "The region where the Queue is deployed. Most often, us-west-2."
         DataHubBaseUrl:
           Default: "DataHub Base Url, for example: https://xxx.acryl.io/gms"
         AwsCommandQueueUrl:
@@ -75,6 +81,9 @@ Parameters:
     Type: "String"
     Default: ""
     Description: "Existing DataHub Access Token Secret Arn, if not specified, will use DataHubAccessToken"
+  AwsRegion:
+    Type: "String"
+    Description: "AWS Region where executor is hosted."
   OptionalSecrets:
     Type: "String"
     Default: ""
@@ -141,6 +150,7 @@ Parameters:
       - 29696
       - 30720
 Conditions:
+  UseAwsRegion: !Not [!Equals [!Ref AwsRegion, ""]]
   UseExistingDataHubAccessTokenSecret: !Not [!Equals [!Ref ExistingDataHubAccessTokenSecretArn, ""]]
   UseDataHubAccessToken: !Not [!Condition UseExistingDataHubAccessTokenSecret]  
   NonEmptyOptionalSecrets: !Not [!Equals [!Ref OptionalSecrets, ""]]
