--- a/remote-executor/datahub-executor.ecs.template.yaml
+++ b/remote-executor/datahub-executor.ecs.template.yaml
@@ -116,7 +116,7 @@ Parameters:
     Description: "A List of Optional environment variables for the ECS task container. Values are not sourced from secrets, but set directly. Environment variables are specified using this parameter in the following form (a single string, multiple variables separated by commas, no spaces, up to 10 environment variables): ENV_VAR_NAME1=ENV_VAR_VALUE1,ENV_VAR_NAME2=ENV_VAR_VALUE2. The name of these secrets should match the name of the secrets in your DataHub ingestion recipe."
   ImageTag:
     Type: "String"
-    Default: "v0.2.15.2"
+    Default: "v0.3.1.5-acryl"
     Description: "The image tag for the Acryl Remote Executor. See the Remote Executor docs for version information."
   DesiredCount:
     Type: "String"
@@ -302,17 +302,6 @@ Resources:
     Properties:
       RoleName: !Sub "${AWS::StackName}-task-role"
       Policies:
-        - PolicyName: ssmmessages-policy
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-            - Action: 
-                - ssmmessages:CreateControlChannel
-                - ssmmessages:CreateDataChannel
-                - ssmmessages:OpenControlChannel
-                - ssmmessages:OpenDataChannel
-              Effect: Allow
-              Resource: "*"
         - PolicyName: logs-policy
           PolicyDocument:
             Version: 2012-10-17
